update to the style

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ body.admin-bar .navbar-fixed-top{
 	color: #000 !important;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 0 30px rgba(255, 255, 255, 0.125);
 	font-weight: bold !important;
-	padding:2px 22px 0px;
 }
 
 .navbar-inner{
@@ -79,6 +78,10 @@ body.admin-bar .navbar-fixed-top{
 .nav-container{
 	padding-left: 0;
 	padding-right: 0;
+}
+
+#logo{
+	padding:2px 22px 0px;
 }
 
 #inner-header{
