--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ body.admin-bar .navbar-fixed-top{
 	width: 100%;
 }
 
+#menu-nav{
+	margin-top:13px;
+
+}
+
 input, textarea, select, .uneditable-input {
 	margin-bottom: 0;
 }
