--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body.admin-bar .navbar-fixed-top{
 
 }
 #content{
-	padding-top:50px;
+	padding-top:50px !important;
 }
 input, textarea, select, .uneditable-input {
 	margin-bottom: 0;
