--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ body{
 	padding-top: 0;
 }
 
+/*Drop Shadow - similar to dashboard area */
+.bitletDropShadow{
+	border:0;
+	box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+	-moz-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+	-ms-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+	-webkit-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+}
+
 /* Admin Top Navigation fixes */
 
 body.admin-bar .navbar-fixed-top{ 
