--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body.admin-bar .navbar-fixed-top{
 
 #menu-nav{
 	margin-top:13px;
-
+	font-size:15px !important;
 }
 #content{
 	padding-top:50px !important;
