--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body.admin-bar .navbar-fixed-top{
 	color: #000 !important;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 0 30px rgba(255, 255, 255, 0.125);
 	font-weight: bold !important;
+	margin-left:-45px !important;
 }
 
 .navbar-inner{
