--- a/style.css
+++ b/style.css
@@ -676,6 +676,11 @@ blockquote.pull-left{
 }
 #minnesota {
 	position:relative;
-	top:100px;
-	left:200px;
+	top:108px;
+	left:173px;
+}
+#isreal {
+	position:relative;
+	top:160px;
+	left:573px;
 }
