--- a/style.css
+++ b/style.css
@@ -684,3 +684,13 @@ blockquote.pull-left{
 	top:117px;
 	left:462px;
 }
+#saudi {
+	position:relative;
+	top:130px;
+	left:480px;
+}
+#tehran {
+	position:relative;
+	top:90px;
+	left:462px;
+}
