--- a/style.css
+++ b/style.css
@@ -686,11 +686,21 @@ blockquote.pull-left{
 }
 #saudi {
 	position:relative;
-	top:130px;
-	left:480px;
+	top:109px;
+	left:506px;
 }
 #tehran {
 	position:relative;
-	top:90px;
-	left:462px;
+	top:35px;
+	left:480px;
+}
+#india {
+	position:relative;
+	top:35px;
+	left:480px;
+}
+#myanmar {
+	position:relative;
+	top:35px;
+	left:480px;
 }
