--- a/style.css
+++ b/style.css
@@ -701,6 +701,11 @@ blockquote.pull-left{
 }
 #myanmar {
 	position:relative;
-	top:50px;
-	left:600px;
+	top:21px;
+	left:605px;
+}
+#haiti {
+	position:relative;
+	top:21px;
+	left:605px;
 }
