--- a/style.css
+++ b/style.css
@@ -672,7 +672,7 @@ blockquote.pull-left{
 }
 .thumbnail .back:hover {
 	display: block;
-	opacity: 50;
+	opacity: .5;
 	top: -10px;
 	left: -10px;
 	width: 220px;
