--- a/style.css
+++ b/style.css
@@ -673,6 +673,7 @@ blockquote.pull-left{
 .thumbnail .back:hover {
 	display: block;
 	opacity: .75;
+	filter: alpha(opacity=75);
 	top: -10px;
 	left: -10px;
 	width: 220px;
@@ -687,7 +688,6 @@ blockquote.pull-left{
 }
 
 .thumbnail .back p {
-	opacity: 1 !important;
 	color: white !important;
 	margin-top:5px;
 }
