--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ blockquote.pull-left{
 	top:22px;
 	left:200px;
 }
-#west-point {
+//#west-point {
 	position:relative;
 	top:-68px;
 	left:209px;
