Comment out West Point

--- a/style.css
+++ b/style.css
@@ -753,11 +753,11 @@ blockquote.pull-left{
 	top:22px;
 	left:200px;
 }
-//#west-point {
+/*#west-point {
 	position:relative;
 	top:-68px;
 	left:209px;
-}
+}*/
 #kuwait {
 	position:relative;
 	top:-64px;
