--- a/style.css
+++ b/style.css
@@ -758,6 +758,11 @@ blockquote.pull-left{
 	top:-64px;
 	left:491px;
 }
+#china {
+	position:relative;
+	top:-64px;
+	left:591px;
+}
 /* Face to face template */
 .ftf-title-box{
 	height:55px;
