--- a/style.css
+++ b/style.css
@@ -763,6 +763,11 @@ blockquote.pull-left{
 	top:-64px;
 	left:605px;
 }
+#pakistan {
+	position:relative;
+	top:40px;
+	left:532px;
+}
 /* Face to face template */
 .ftf-title-box{
 	height:55px;
