--- a/style.css
+++ b/style.css
@@ -722,7 +722,7 @@ blockquote.pull-left{
 #map-title-box {
 	height:55px;
 	width:453px;
-	background:#2E9AFE;
+	background:#58ACFA;
 	border-bottom:4px solid #808080;
 }
 
